<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<!--    TODO Change icon properly -->
    <group
        android:id="@+id/grp_2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/tripListFragment"
            android:title="@string/menu_trips"
            android:icon="@drawable/car"/>
        <item
            android:id="@+id/othersTripListFragment"
            android:title="@string/menu_others_trips"
            android:icon="@drawable/trip_multiple"/>
        <item
            android:id="@+id/tripsOfInterestListFragment"
            android:title="@string/menu_interested_trips"
            android:icon="@drawable/trip_eye"/>
        <item
            android:id="@+id/boughtTripsListFragment"
            android:title="@string/menu_booked_trips"
            android:icon="@drawable/trip_dollar"/>
    </group>
</menu>