<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:padding="0dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="2.5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/userImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/user_image"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/userImageGuideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/userImageGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/fullName"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="@dimen/secondary_text"
            app:layout_constraintStart_toStartOf="@+id/userImageGuideline"
            app:layout_constraintTop_toBottomOf="@id/reviewButton" />

        <TextView
            android:id="@+id/userEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/email"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/userImageGuideline"
            app:layout_constraintTop_toBottomOf="@+id/userName" />

        <ImageButton
            android:id="@+id/acceptUserButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/user_accept_button"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="@+id/reviewButton"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toStartOf="@+id/rejectUserButton"
            app:layout_constraintTop_toTopOf="@id/reviewButton"
            app:layout_constraintWidth_percent="0.1"
            app:srcCompat="@drawable/icons8_expand_arrow_100" />

        <ImageButton
            android:id="@+id/rejectUserButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/delete_item"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="@+id/acceptUserButton"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/acceptUserButton"
            app:layout_constraintWidth_percent="0.1"
            app:srcCompat="@drawable/icons8_delete_100" />

        <Button
            android:id="@+id/reviewButton"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:scrollbarAlwaysDrawHorizontalTrack="false"
            android:scrollbarAlwaysDrawVerticalTrack="false"
            android:text="Leave Review"
            android:visibility="invisible"
            app:layout_constraintHeight_percent="0.4"
            app:layout_constraintStart_toStartOf="@id/userImageGuideline"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>